--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<!--<layout>-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,9 +8,10 @@
 
 
     <SurfaceView
+        android:id="@+id/surface_deepar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/surface_deepar"/>
+        />
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
@@ -118,4 +119,5 @@
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+<!--
+</layout>-->
